namespace.yaml
# create namespace elbdrawy
apiVersion: v1
kind: Namespace
metadata:
  name: elbdrawy
  labels:
    name: elbdrawy-ns
