deploymeny.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-service-deployment
  namespace: elbdrawy
  labels:
    app: sample-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-service-deployment
  template:
    metadata:
      labels:
        app: sample-service-deployment
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: sample-service-container
          image: ahmedelbdrawy/app:1.0.2
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "0.5"
            requests:
              cpu: "0.1"
              memory: "128Mi"
          securityContext: 
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
