service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
  namespace: elbdrawy
spec:
  type: NodePort
  selector:
    app: sample-service-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30080
