service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-service-ingress
  namespace: elbdrawy
spec:
  ingressClassName: nginx
  rules:
    - host: app.elbdrawy.cx 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-service
                port:
                  number: 8080
